<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/blockForVariable"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:background="@color/ifBlockColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        tools:ignore="MissingConstraints"
        android:layout_margin="5dp">

        <EditText
            android:id="@+id/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:visibility="gone" />

        <EditText
            android:id="@+id/name"
            android:layout_width="209dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="87dp"
            android:layout_marginEnd="35dp"
            android:ems="10"
            android:hint="@string/condition"
            android:inputType="textPersonName"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/typeLayout"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="251dp"
            android:layout_marginBottom="0dp"
            android:background="@color/blockTypeColor">

            <TextView
                android:id="@+id/blockType"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/IF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="38dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="-29dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/name"
            android:background="@color/blockTypeColor">

            <TextView
                android:id="@+id/bracket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:text="@string/open_bracket"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>