<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/blockForVariable"
        android:layout_width="331dp"
        android:layout_height="50dp"
        android:background="@color/ifBlockColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066"
        tools:ignore="MissingConstraints"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/blockType"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:ignore="RelativeOverlap" />

        <EditText
            android:id="@+id/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:visibility="gone" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/typeLayout"
            android:layout_width="38dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="@color/blockTypeColor">

            <TextView
                android:id="@+id/bracketClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="7dp"
                android:text="@string/close_bracket"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="302dp"
            android:layout_toEndOf="@+id/name"
            android:background="@color/blockTypeColor">

            <TextView
                android:id="@+id/bracket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="7dp"
                android:gravity="center"
                android:text="@string/open_bracket"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="70dp"
            android:layout_marginStart="0dp"
            android:layout_toEndOf="@+id/typeLayout"
            android:background="@color/blockTypeColor"
            android:gravity="center">

            <TextView
                android:id="@+id/Else"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="7dp"
                android:text="@string/_else"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>